--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,16 +12,16 @@ Metrics/AbcSize:
 # Offense count: 2
 # Configuration parameters: CountComments.
 Metrics/ClassLength:
-  Max: 169
+  Max: 171
 
 # Offense count: 2
 Metrics/CyclomaticComplexity:
-  Max: 11
+  Max: 7
 
 # Offense count: 17
 # Configuration parameters: AllowURI, URISchemes.
 Metrics/LineLength:
-  Max: 121
+  Max: 117
 
 # Offense count: 8
 # Configuration parameters: CountComments.
@@ -34,5 +34,5 @@ Metrics/ParameterLists:
   Max: 8
 
 # Offense count: 2
-Metrics/PerceivedComplexity:
-  Max: 12
+#Metrics/PerceivedComplexity:
+#  Max: 8
