--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,5 @@ Metrics/MethodLength:
 Metrics/ParameterLists:
   Max: 8
 
-# Offense count: 2
-#Metrics/PerceivedComplexity:
-#  Max: 8
+Style/SpecialGlobalVars:
+  Enabled: false
